[application] Fix incorrect badge icon alignment.
Screenshot: https://i.imgur.com/d4pcqRY.png
Fixed: chromium:1516589
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5174055
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/panels/application/preloading/components/usedPreloadingView.css
+++ b/front_end/panels/application/preloading/components/usedPreloadingView.css
@@ -56,6 +56,11 @@ devtools-report-divider {
 .status-badge {
   border-radius: 4px;
   padding: 4px;
+
+  devtools-icon {
+    width: 16px;
+    height: 16px;
+  }
 }
 
 .status-badge-success {
@@ -68,8 +73,4 @@ devtools-report-divider {
 
 .status-badge-neutral {
   background: var(--sys-color-neutral-container);
-}
-
-.status-badge devtools-icon {
-  vertical-align: sub;
 }
